@@ -1,3 +1,9 @@
+1998-02-13  Federico Mena Quintero  <federico@nuclecu.unam.mx>
+
+	* gnome-app.c: indentation fixes.
+
+	* gnome-stock.c (build_hash_key): Made routine use g_copy_strings().
+
 Fri Feb 13 19:03:21 1998  Miguel de Icaza  <miguel@nuclecu.unam.mx>
 
 	* gtk-ted.c (gtk_ted_parse_pos): Initialize flags to zero before
